# pdf_compress

./: .gitignore  AUDIT.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  app.py  build.bat  build_installer.bat  compress_paths.py  compress_pdf.bat  compress_pdf.py  engine.py  epdf_crypto.py  installer.iss  pdf_analyze.py  pdf_compress_gui.py  pdf_ops.py  pdf_toolkit.spec  pdf_translate.py  pdf_verify.py  pyproject.toml  requirements.txt  setup_translation.py  translate_runtime.py  translate_runtime_lock.json
.github/workflows/: ci.yml
assets/fonts/: README.txt
tests/: conftest.py  test_bridge.py  test_cli.py  test_engine.py  test_epdf_crypto.py  test_pdf_analyze.py  test_pdf_ops.py  test_pdf_translate.py  test_pdf_verify.py  test_translate_runtime.py
ui/: __init__.py  batch_helpers.py  bridge.py  dialogs.py  icons.py  net_guard.py  shell.py  sidebar.py  signals.py  theme.py  tool_registry.py  web_shell.py  widgets.py  widgets_generic.py
ui/pages/: base.py  compare_page.py  compress_page.py  crop_page.py  extract_images_page.py  extract_text_page.py  flatten_page.py  home_page.py  images_to_pdf_page.py  merge_page.py  metadata_page.py  nup_page.py  page_numbers_page.py  page_ops_page.py  pdf_to_images_page.py  pdf_to_word_page.py  protect_page.py  redact_page.py  repair_page.py  split_page.py  unlock_page.py  watermark_page.py
web/: index.html
web-react/: PARITY_AUDIT.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
web-react/src/: App.tsx  main.tsx
web-react/src/bridge/: bridgeApi.ts  eventBus.ts  mockData.ts  mockEventBus.ts  qwebchannel-connect.ts  safeJsonParse.ts  useHotkeys.ts  useOperation.ts
web-react/src/components/: FindingRow.tsx  RiskHeader.tsx  SanitizePanel.tsx  severityMeta.ts
web-react/src/dev/: ComponentGallery.tsx
web-react/src/pages/: AnalyzePage.tsx  HomePage.tsx
web-react/src/router/: Router.tsx
web-react/src/shell/: AppShell.tsx  Sidebar.tsx
web-react/src/styles/: theme.css
web-react/src/types/: analyze.ts  bridge.ts  global.d.ts
web-react/src/workspace/: WorkspaceBar.tsx  WorkspaceContext.tsx  workspaceOutputPath.ts
web/css/: animations.css  base.css  components.css  layout.css  pages.css  variables.css
web/js/: app.js  bridge.js  components.js  icons.js  router.js
web/js/pages/: analyze.js  compare.js  compress.js  crop.js  extract-images.js  extract-text.js  flatten.js  home.js  images-to-pdf.js  merge.js  (+13 more)
(+34 files in other folders)
